Updating TC reset to properly reset stats for days 1/2 of the month